2002-02-04  Hans-Peter Nilsson  <hp@bitrange.com>

	* gas/mmix/basep-8.d, gas/mmix/basep-9.s, gas/mmix/basep-9.d,
	gas/mmix/err-bpo6.s, gas/mmix/basep-8.s, gas/mmix/basep-10.d,
	gas/mmix/basep-10.s, gas/mmix/basep-11.s, gas/mmix/basep-11.d: New
	tests for base-plus-offset relocations and global register
	allocations for weak and common symbols.

2002-02-02  Alan Modra  <amodra@bigpond.net.au>

	* gas/elf/elf.exp: Don't special case v850.

2002-02-01  Hans-Peter Nilsson  <hp@bitrange.com>

	* gas/mmix/basep-1b.d, gas/mmix/basep-2b.d, gas/mmix/basep-7.d,
	gas/mmix/err-bpo2.s, gas/mmix/basep-3b.d, gas/mmix/err-bpo3.s,
	gas/mmix/basep-4.d, gas/mmix/err-bpo4.s, gas/mmix/err-bpo5.s,
	gas/mmix/basep-5.d, gas/mmix/basep-6.d: New tests.

2002-01-22  Alexandre Oliva  <aoliva@redhat.com>

	* gas/mn10300/basic.exp (run_list_test): New proc, from alpha.
	* gas/mn10300/movpc.s, gas/mn10300/movpc.l: New tests.

2002-01-22  Richard Henderson  <rth@redhat.com>

	* gas/alpha/unop.s, gas/alpha/unop.d: New test.
	* gas/alpha/alpha.exp: Run it.

2002-01-21  Thomas Klausner <wiz@danbala.ifoer.tuwien.ac.at>

	* gas/cris/cris.exp: Comment typo fix

2002-01-18  Richard Earnshaw  <rearnsha@arm.com>
	    Keith Walker  <keith.walker@arm.com>

	* gas/arm/arch5tej.s gas/arm/arch5tej.d: New files.
	* gas/arm/arm.exp (arch5tej): New dump test.

2002-01-18  Richard Earnshaw  <rearnsha@arm.com>

	* gas/arm/vfp1.d: Use new command-line options.
	* gas/arm/vfp1xD.d: Likewise.
	* gas/arm/arm.exp (vfp-bad): Likewise.
	* gas/arm/maverick.d: Likewise.

2002-01-17  Timothy Wall  <twall@oculustech.com>

	* gas/tic54x/labels.s (after_macro): Correct comments.

2002-01-15   Richard Earnshaw  <rearnsha@arm.com>

	* gas/arm/vfp1.s gas/arm/vf1.d: New files.
	* gas/arm/vfp1xD.s gas/arm/vf1xD.d: New files.
	* gas/arm/vfp-bad.s gas/arm/vfp-bad.l: New files.
	* gas/arm/arm.exp: Run new VFP tests.

2002-01-15  Nick Clifton  <nickc@cambridge.redhat.com>

	* gas/elf/section2.e-m32r: New file.