@@ -1,4 +1,4 @@
-# Copyright (C) 1995, 1996, 1997 Free Software Foundation, Inc.
+# Copyright (C) 1995, 1996, 1997, 2002 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -90,4 +90,6 @@ if [istarget sh*-*-*] then {
     do_fp
     # Test DSP instructions
     run_dump_test "dsp"
+
+    run_dump_test "pcrel"
 }
