@@ -1,3 +1,9 @@
+2002-02-04  Alexandre Oliva  <aoliva@redhat.com>
+
+	* gas/testsuite/gas/sh/pcrel.d: New test.
+	* gas/testsuite/gas/sh/pcrel.s: Sources for new test.
+	* gas/testsuite/gas/sh/basic.exp: Run it.
+
 2002-02-04  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* gas/mmix/basep-8.d, gas/mmix/basep-9.s, gas/mmix/basep-9.d,
